styles.css
@import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;700&family=Paytone+One&display=swap");

:root {
  --bg: #fbf1c7;
  --fg: #3c3836;
  --bg_rgb: 251, 241, 199;
  --fg_rgb: 60, 56, 54;
  --secondary: #8ec07c;
  --ternary: #458588;
  --accent: #b16286;
}

.dark {
  --bg: #282828;
  --fg: #ebdbb2;
  --bg_rgb: 20, 20, 20;
  --fg_rgb: 235, 219, 178;
  --secondary: #8ec07c;
  --ternary: #458588;
  --accent: #cc241d;
}

* {
  line-height: 1.5;
  scroll-behavior: smooth;
  font-size: 20px;
  font-family: "El Messiri", cursive;
  box-sizing: border-box;
}

body {
  color: var(--fg);
  margin: 0;
  background-color: var(--bg);
}

.wrapper {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

header {
  padding: 5px 0;
  position: fixed;
  width: 100%;
  z-index: 50;
  background-color: transparent;
  backdrop-filter: blur(8px);
  -webkit-backdrop-filter: blur(8px);
}

nav {
  height: 3rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav a {
  text-overflow: clip;
  font-size: 1rem;
}

.logo {
  font-size: 1.5rem;
  font-weight: 900;
  padding: 5px 10px;
}

li {
  list-style-type: none;
}

a {
  color: var(--fg);
  text-decoration: none;
}

.nav--left {
  padding: 0px 0px 0px 30px;
}

.nav--right {
  display: flex;
  padding: 0px 40px 0px 0px;
}

.nav--right--left a {
  padding: 10px 20px;
}

.nav--right--right a {
  padding: 10px 20px;
}

.nav__list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

nav a:hover {
  background-color: rgba(var(--fg_rgb), 0.1);
  border-radius: 3px;
}

.mail-button {
  margin-left: 10px;
  padding: 5px 15px;
  background-color: var(--accent);
  border-radius: 5px;
}

main {
  position: relative;
  max-width: 1000px;
  margin: auto;
}

main > div {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
  gap: 50px;
}

[class*="__text"] {
  width: 50%;
  display: flex;
  flex-direction: column;
}

.greetings {
  font-size: 60px;
  margin: 0;
  line-height: 3.25rem;
}

.decor {
  line-height: 3.25rem;
  font-size: 60px;
  background-image: linear-gradient(to right, var(--accent), var(--ternary));
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.project__link {
  padding: 10px 20px;
  width: 40%;
  text-align: center;
  border-radius: 5px;
  border: solid 1px var(--fg);
  color: var(--fg);
  font-weight: 600;
}

.project__link:hover {
  background-color: white;
  color: var(--bg);
}

#intro > div {
  width: 50%;
  display: flex;
  flex-direction: column;
}

.intro__tech-stack {
  display: flex;
  align-items: center;
  justify-content: center;
}

.circle {
  position: absolute;
  border: 1px solid var(--fg);
  border-radius: 50%;
  background-color: transparent;
  line-height: 50px;
}

[class*="circle--"] > * {
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
}

.circle--first {
  width: 80px;
  height: 80px;
}

.circle--second {
  width: 160px;
  height: 160px;
}

.circle--third {
  width: 240px;
  height: 240px;
}

.circle--fourth {
  width: 320px;
  height: 320px;
}

.rotate {
  animation: rotate infinite linear;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.heading {
  font-size: 60px;
  margin: 0;
  padding-top: 4rem;
}

#about-me {
  display: block;
}

#about-me > .container {
  display: flex;
  flex-direction: row;
  gap: 50px;
  align-items: center;
}

#about-me p {
  margin: 10px 0;
}

.profile-picture {
  border-radius: 10px;
  background-color: var(--accent);
  width: 400px;
  box-shadow: 12px 12px var(--ternary);
  padding-top: 20px;
  justify-content: flex-end;
}

.shadow-box {
  width: 450px;
  background-color: cyan;
  translate: (-50%, -50%);
}

footer {
  position: absolute;
  width: 100%;
  text-align: center;
  background: rgba(var(--bg_rgb), 0.2);
  margin-top: 120px;
}

footer > p {
  color: var(--fg);
  padding: 10px 0;
}

@media (max-width: 1080px) {
  * {
    margin: auto;
  }
  nav {
    display: inline-block;
    text-align: center;
  }
  .nav--left {
    padding: 0;
  }
  main > div {
    display: block;
    position: relative;
    padding-top: 160px;
  }
  .nav__list {
    padding: 0px 20px;
  }
  header {
    padding: 20px;
  }
  .nav--right {
    display: inline-block;
  }
  #about-me > .container {
    display: inline-flex;
    flex-direction: column;
  }
  .intro__tech-stack {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

